added gender in mail subscribe and render data in order list

--- a/app_custom_training/cartridges/app_custom_sfra_training/cartridge/templates/resources/orderList.properties
+++ b/app_custom_training/cartridges/app_custom_sfra_training/cartridge/templates/resources/orderList.properties
@@ -3,5 +3,7 @@ order.table.head1 = Order Number
 order.table.head2 = Shipment address first name
 order.table.head3 = Shipment address last name
 order.table.head4 = Email address
+order.table.head5 = Middle name
+order.table.head6 = Company name
 order.table.body = {0}
 mail.body = hey you, you only. I am asking you only, look at over here. You are great and more precious person. You can do everything, just focus on it :)
