--- a/app_custom_training/cartridges/app_custom_sfra_training/cartridge/templates/resources/forms.properties
+++ b/app_custom_training/cartridges/app_custom_sfra_training/cartridge/templates/resources/forms.properties
@@ -10,6 +10,7 @@ label.input.lastname.profile=Last Name
 label.input.email.profile=Email
 label.input.phone.profile=Phone
 label.input.emailconfirm.profile=Confirm Email
+label.input.gender.profile=Gender
 label.input.password.profile=Password
 label.input.passwordconfirm.profile=Confirm Password
 label.input.newpasswordconfirm.profile=Confirm New Password
